--- a/index.html
+++ b/index.html
@@ -28,90 +28,99 @@
   </head>
   <body>
     <div class="container">
-     <div style="background-color: white;">
-      <div class="navbar">  
-        <div class="upper">
-          <div
-            class="neptune_logo"
-            style="padding-top: 30px; padding-left: 15px"
-          >
-            <img src="assests/logo.jpeg" alt="logo" />
-          </div>
-
-          <div class="profile">
-            <div class="username">
-              <div class="profile_pic">
-                <img src="assests/Group 79.jpg" alt="" />
-              </div>
-
-              <div class="namebox">
-                <div class="name">
-                  <h3>Jessica Thompson</h3>
-                </div>
-                <div class="role">
-                  <p>Primary User</p>
-                </div>
-              </div>
-              <div class="down_arrow">
-                <img src="assests/Shape.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-
-          <div class="features">
-            <div class="home-feature">
-              <img src="assests/home 1.svg" alt="home" />
-              <p>Home</p>
-            </div>
-            <div class="document-feature">
-              <img src="assests/file-text 1.png" alt="document" />
-              <p>Documents</p>
-            </div>
-            <div class="chat-feature">
-              <img src="assests/message-circle 1.png" alt="chat" />
-              <p>Chat With Neptune</p>
-            </div>
-
-            <div class="help-feature">
-              <img src="assests/help-circle 1.png" alt="" />
-              <p>Help</p>
-            </div>
-            <div class="settings-feature">
-              <img src="assests/settings 1.png" alt="" />
-              <p>Settings</p>
-            </div>
-          </div>
-        </div>
-        <div class="lower">
-          <div class="phone_img">
-            <img src="assests/phone 1.png" alt="" />
-          </div>
-          <div class="phone-heading">
-            <h3>Having Trouble?</h3>
-            <p>
-              Feel free to contact us and we will always help you through the
-              process.
-            </p>
-          </div>
-
-          <div class="contact">
-            <button
-              style="
-                padding: 8px 20px;
-                border-radius: 5px;
-                background-color: #1f4451;
-                color: white;
-                height: 50px;
-                width: auto;
-                font-size: 16px;
-              "
+      <div style="background-color: white">
+        <div class="navbar">
+          <div class="upper">
+            <div
+              class="neptune_logo"
+              style="padding-top: 30px; padding-left: 15px"
             >
-              Contact Us
-            </button>
+              <img src="assests/logo.jpeg" alt="logo" />
+            </div>
+
+            <div class="profile">
+              <div class="username">
+                <div class="profile_pic">
+                  <img src="assests/Group 79.jpg" alt="" />
+                </div>
+
+                <div class="namebox">
+                  <div class="name">
+                    <h3>Jessica Thompson</h3>
+                  </div>
+                  <div class="role">
+                    <p>Primary User</p>
+                  </div>
+                </div>
+                <div class="down_arrow">
+                  <img src="assests/Shape.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+
+            <div class="features">
+              <div class="home-feature">
+                <a href="home-link.html">
+                  <img src="assests/home 1.svg" alt="home" />
+                  <p>Home</p>
+                </a>
+              </div>
+              <div class="document-feature">
+                <a href="document-link.html">
+                  <img src="assests/file-text 1.png" alt="document" />
+                  <p>Documents</p>
+                </a>
+              </div>
+              <div class="chat-feature">
+                <a href="chat-link.html">
+                  <img src="assests/message-circle 1.png" alt="chat" />
+                  <p>Chat With Neptune</p>
+                </a>
+              </div>
+              <div class="help-feature">
+                <a href="help-link.html">
+                  <img src="assests/help-circle 1.png" alt="help" />
+                  <p>Help</p>
+                </a>
+              </div>
+              <div class="settings-feature">
+                <a href="settings-link.html">
+                  <img src="assests/settings 1.png" alt="settings" />
+                  <p>Settings</p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="lower">
+            <div class="phone_img">
+              <img src="assests/phone 1.png" alt="" />
+            </div>
+            <div class="phone-heading">
+              <h3>Having Trouble?</h3>
+              <p>
+                Feel free to contact us and we will always help you through the
+                process.
+              </p>
+            </div>
+
+            <div class="contact">
+              <button
+                style="
+                  padding: 8px 20px;
+                  border-radius: 5px;
+                  background-color: #1f4451;
+                  color: white;
+                  height: 50px;
+                  width: auto;
+                  font-size: 16px;
+                "
+              >
+                Contact Us
+              </button>
+            </div>
           </div>
         </div>
       </div>
-     </div>
       <div class="content">
         <div
           style="
@@ -156,7 +165,7 @@
             <table>
               <thead>
                 <tr>
-                  <th><input type="checkbox" id="selectall"/></th>
+                  <th><input type="checkbox" id="selectall" /></th>
                   <th>Document Name</th>
                   <th>Status</th>
                   <th>Last Modified</th>
