--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
 
             <div class="features">
               <div class="home-feature">
-                <a href="home-link.html">
+                <a href="#">
                   <img src="assests/home 1.svg" alt="home" />
                   <p>Home</p>
                 </a>
               </div>
               <div class="document-feature">
-                <a href="document-link.html">
+                <a href="#">
                   <img src="assests/file-text 1.png" alt="document" />
                   <p>Documents</p>
                 </a>
               </div>
               <div class="chat-feature">
-                <a href="chat-link.html">
+                <a href="#">
                   <img src="assests/message-circle 1.png" alt="chat" />
                   <p>Chat With Neptune</p>
                 </a>
               </div>
               <div class="help-feature">
-                <a href="help-link.html">
+                <a href="#">
                   <img src="assests/help-circle 1.png" alt="help" />
                   <p>Help</p>
                 </a>
               </div>
               <div class="settings-feature">
-                <a href="settings-link.html">
+                <a href="#">
                   <img src="assests/settings 1.png" alt="settings" />
                   <p>Settings</p>
                 </a>
