--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Neptune Design</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,11 +31,9 @@
       <div style="background-color: white">
         <div class="navbar">
           <div class="upper">
-            <div
-              class="neptune_logo"
-              style="padding-top: 30px; padding-left: 25px"
-            >
+            <div class="neptune_logo">
               <img src="assests/logo.jpeg" alt="logo" />
+              <img src="assests/left-arrow.png" id="sidetoggle" alt="" />
             </div>
 
             <div class="profile">
